# booleanOperations

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  appveyor.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
Lib/booleanOperations/: __init__.py  booleanGlyph.py  booleanOperationManager.py  exceptions.py  flatten.py
Lib/booleanOperations/test/: testBooleanGlyph.py
Lib/booleanOperations/test/testData/: generateGlyphDataRoboFont.py
cppWrapper/: clipper.cpp  clipper.hpp  pyClipper.pyx  setup.py
test/: testBooleanGlyph.py
test/testData/: generateGlyphDataRoboFont.py
test/testData/test.ufo/: lib.plist
test/testData/test.ufo/glyphs/: test.3.glif  test.6.glif
test/testData/test.ufo/glyphs.difference/: test.9.glif
test/testData/test.ufo/glyphs.intersection/: test.1.glif  test.10.glif  test.3.glif  test.5.glif
test/testData/test.ufo/glyphs.union/: contents.plist  test.3.glif  test.8.glif
tests/: testBooleanGlyph.py  test_BooleanGlyph.py  test_booleanOperations.py
tests/testData/: generateGlyphDataRoboFont.py  visualTest.py
tests/testData/NotoSansTest.ufo/: fontinfo.plist
tests/testData/NotoSansTest.ufo/glyphs/: contents.plist
tests/testData/test.ufo/: layercontents.plist  lib.plist
tests/testData/test.ufo/glyphs/: Q_.glif  Q_T_ail_reversed.glif  contents.plist  oval.glif  ovalO_val.glif  ovalO_val_reversed.glif  ovalR_ect.glif  ovalR_ect_reversed.glif  (+11 more)
tests/testData/test.ufo/glyphs.difference/: Q_.glif  Q_T_ail_reversed.glif  layerinfo.plist  ovalO_val.glif  ovalO_val_reversed.glif  ovalR_ect.glif  ovalR_ect_reversed.glif  rectO_val.glif  rectO_val_reversed.glif  rectR_ect.glif  rectR_ect_reversed.glif  test.11.glif  test.6.glif
tests/testData/test.ufo/glyphs.intersection/: Q_.glif  Q_T_ail_reversed.glif  contents.plist  layerinfo.plist  ovalO_val.glif  ovalO_val_reversed.glif  ovalR_ect.glif  ovalR_ect_reversed.glif  rectO_val.glif  rectO_val_reversed.glif  rectR_ect.glif  rectR_ect_reversed.glif  test.4.glif  test.6.glif
tests/testData/test.ufo/glyphs.union/: Q_.glif  Q_T_ail_reversed.glif  contents.plist  layerinfo.plist  oval.glif  ovalO_val.glif  ovalO_val_reversed.glif  ovalR_ect.glif  ovalR_ect_reversed.glif  oval_differentS_tartP_oint.glif  rect.glif  rectO_val.glif  rectO_val_reversed.glif  rectR_ect.glif  rectR_ect_reversed.glif  rect_differentS_tartP_oint.glif  test.11.glif  test.12.glif  test.5.glif  test.9.glif  zeroA_rea.glif  zeroA_reaS_elfI_ntersecting.glif
tests/testData/test.ufo/glyphs.xor/: Q_.glif  Q_T_ail_reversed.glif  ovalO_val.glif  ovalO_val_reversed.glif  ovalR_ect.glif  ovalR_ect_reversed.glif  rectO_val.glif  rectO_val_reversed.glif  rectR_ect.glif  rectR_ect_reversed.glif  test.4.glif
(+30 files in other folders)
