[metadata]
name = booleanOperations
description = Boolean operations on paths.
long_description = file: README.rst
url = https://github.com/typemytype/booleanOperations
author = Frederik Berlaen
author_email = frederik@typemytype.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Multimedia :: Graphics :: Editors :: Vector-Based
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir = =Lib
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
    wheel
install_requires =
    pyclipper >= 1.1.0.post1
    fonttools >= 4.0.2

[options.packages.find]
where = Lib

[bdist_wheel]
universal = 0

[sdist]
formats = zip

[tool:pytest]
addopts =
    # show extra test summary info
    -r a
    # run doctests in all .py modules
    --doctest-modules
filterwarnings =
    ignore::DeprecationWarning:fontTools.misc.py23
